database output and styling

--- a/task_Management_App/templates/index.html
+++ b/task_Management_App/templates/index.html
@@ -5,26 +5,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 </head>
 
 <body>
-    <h1>This is a working html page</h1>
+    <h1>Your tasks..</h1>
 </body>
-{% for item in all_items %}
-<p>{{item}} <a href="{% url 'delete' item.id %}">DELETE</a></p>
-{% endfor %}
+<table class="table table-hover">
+    <tr>
+        <th>Task Name</th>
+        <th>Completed</th>
+        <th>Delete</th>
+    </tr>
+    {% for item in all_items %}
+    <tr>
+        <td>{{item.task}} </td>
+        <td>{{item.completed}} </td>
+        <td><a class="btn btn-outline-danger" href="{% url 'delete' item.id %}">DELETE</a> </td>
+    </tr>
+    {% endfor %}
+</table>
+
+
 
 <form action="{% url 'home' %}" method=post>
     {% csrf_token %}
+
     <input type="text" name="task" placeholder="Enter task"><br>
     <input type="text" name="priority" placeholder="Enter priority"><br>
-    <input type="submit" name="" value="Submit"> <br>
+    <input type="submit" name="" value="Submit" class="btn btn-success"> <br>
     {% if messages %}
     {% for message in messages %}
     <h3>{{message}}</h3>
     {% endfor %}
     {% endif %}
 </form>
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
 </html>
